--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>GOALS</title>
+	<title>2020 GOALS</title>
 	<style>
 
 		html {
@@ -278,22 +278,22 @@
 						<div class="day day-done">
 							<a href="#">16</a>
 						</div>
-						<div class="day">
+						<div class="day day-done">
 							<a href="#">17</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">18</a>
 						</div>
-						<div class="day">
+						<div class="day day-done">
 							<a href="#">19</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">20</a>
 						</div>
-						<div class="day">
+						<div class="day day-done">
 							<a href="#">21</a>
 						</div>
-						<div class="day">
+						<div class="day day-good">
 							<a href="#">22</a>
 						</div>
 						<div class="day">
