--- a/index.html
+++ b/index.html
@@ -298,22 +298,22 @@
 						<div class="day day-good">
 							<a href="#">22</a>
 						</div>
-						<div class="day">
+						<div class="day day-half">
 							<a href="#">23</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">24</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">25</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">26</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">27</a>
 						</div>
-						<div class="day">
+						<div class="day day-good">
 							<a href="#">28</a>
 						</div>
 						<div class="day">
