--- a/index.html
+++ b/index.html
@@ -316,13 +316,13 @@
 						<div class="day day-good">
 							<a href="#">28</a>
 						</div>
-						<div class="day">
+						<div class="day day-good">
 							<a href="#">29</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">30</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">31</a>
 						</div>
 					</div>
