--- a/index.html
+++ b/index.html
@@ -333,52 +333,52 @@
 						<p>February</p>
 					</div>
 					<div class="days">
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">1</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">2</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">3</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">4</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">5</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">6</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">7</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">8</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">9</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">10</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">11</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">12</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">13</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">14</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">15</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">16</a>
 						</div>
 						<div class="day">
