--- a/index.html
+++ b/index.html
@@ -381,10 +381,10 @@
 						<div class="day day-low">
 							<a href="#">16</a>
 						</div>
-						<div class="day">
+						<div class="day day-done">
 							<a href="#">17</a>
 						</div>
-						<div class="day">
+						<div class="day day-half">
 							<a href="#">18</a>
 						</div>
 						<div class="day">
