--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 				<div class="goal">
 					<div class="goal-progress">
-						<p>20/365</p>
+						<p>35/365</p>
 					</div>
 					<div class="goal-title">
 						<p>Code at least 365 hours (1 hour/day)</p>
@@ -162,7 +162,7 @@
 
 				<div class="goal">
 					<div class="goal-progress">
-						<p>32/365</p>
+						<p>61/365</p>
 					</div>
 					<div class="goal-title">
 						<p>Watch 365 science videos (1/day)</p>
@@ -173,7 +173,7 @@
 
 				<div class="goal">
 					<div class="goal-progress">
-						<p>112/3650</p>
+						<p>222/3650</p>
 					</div>
 					<div class="goal-title">
 						<p>Read 3650 pages (10/day)</p>
@@ -184,10 +184,10 @@
 
 				<div class="goal">
 					<div class="goal-progress">
-						<p>45/1095</p>
+						<p>58/365</p>
 					</div>
 					<div class="goal-title">
-						<p>Learn 1095 new Eng words (3/day)</p>
+						<p>Learn 365 new Eng words (1/day)</p>
 					</div>
 				</div>
 
@@ -387,28 +387,28 @@
 						<div class="day day-half">
 							<a href="#">18</a>
 						</div>
-						<div class="day">
+						<div class="day day-half">
 							<a href="#">19</a>
 						</div>
-						<div class="day">
+						<div class="day day-half">
 							<a href="#">20</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">21</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">22</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">23</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">24</a>
 						</div>
-						<div class="day">
+						<div class="day day-low">
 							<a href="#">25</a>
 						</div>
-						<div class="day">
+						<div class="day day-good">
 							<a href="#">26</a>
 						</div>
 						<div class="day">
